Create general layout

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -2,13 +2,13 @@
   /* COLOR START */
 
   /* BG-COLOR */
-  --color-bg-interface: #101012;
-  --color-bg-page: #151517;
+  --color-bg-page: #101012;
+  --color-bg-interface: #151517;
   --color-bg-selected: #1E1D22;
 
   /* EL-COLORS */
   --color-el-active: #EAE9F0;
-  --color-el-pasive: #EAE9F0;
+  --color-el-pasive: #44454E;
   --color-el-selected: linear-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
 
   /* COLOR END */
@@ -21,4 +21,5 @@
     margin: 0;
     padding: 0;
     background-color: var(--color-bg-interface);
+    color: var(--color-el-active);
   }
