--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,25 @@
 .app {
   display: flex;
+  width: 100vw;
+  height: 100vh;
 }
 
 .container {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .interface {
   display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
