--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -2,7 +2,14 @@
     width: 270px;
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
     border-right: 1px solid var(--color-el-pasive);
 }
+
+.navigation i {
+    margin-right: 10px;
+}
+
+.navigation li {
+    list-style: none;
+}
+
